Add record support. Minimal Java version 17.