@@ -1,16 +1,15 @@
 package org.jresearch.hamcrest.beanmatcher.apt;
 
-import java.io.IOException;
-import java.io.Writer;
-import java.util.Collection;
-import java.util.HashSet;
-import java.util.LinkedList;
-import java.util.List;
-import java.util.Map;
-import java.util.Optional;
-import java.util.Queue;
-import java.util.Set;
-import java.util.concurrent.atomic.AtomicInteger;
+import com.google.auto.service.AutoService;
+import com.google.common.collect.ImmutableSet;
+import com.squareup.javapoet.ClassName;
+import com.squareup.javapoet.JavaFile;
+import com.squareup.javapoet.JavaFile.Builder;
+import com.squareup.javapoet.TypeSpec;
+import lombok.Getter;
+import one.util.streamex.EntryStream;
+import one.util.streamex.StreamEx;
+import org.jresearch.hamcrest.beanmatcher.annotation.BeanMatcher;
 
 import javax.annotation.processing.AbstractProcessor;
 import javax.annotation.processing.Messager;
@@ -28,363 +27,374 @@ import javax.lang.model.element.Modifier;
 import javax.lang.model.element.Name;
 import javax.lang.model.element.PackageElement;
 import javax.lang.model.element.QualifiedNameable;
+import javax.lang.model.element.RecordComponentElement;
 import javax.lang.model.element.TypeElement;
 import javax.lang.model.type.ArrayType;
 import javax.lang.model.type.DeclaredType;
 import javax.lang.model.type.PrimitiveType;
 import javax.lang.model.type.TypeKind;
 import javax.lang.model.type.TypeMirror;
-import javax.lang.model.util.ElementScanner8;
 import javax.lang.model.util.Elements;
-import javax.lang.model.util.SimpleTypeVisitor8;
+import javax.lang.model.util.SimpleTypeVisitor14;
 import javax.lang.model.util.Types;
 import javax.tools.Diagnostic.Kind;
 import javax.tools.JavaFileObject;
 
-import org.jresearch.hamcrest.beanmatcher.annotation.BeanMatcher;
-
-import com.google.auto.service.AutoService;
-import com.google.common.collect.ImmutableList;
-import com.google.common.collect.ImmutableSet;
-import com.squareup.javapoet.ClassName;
-import com.squareup.javapoet.JavaFile;
-import com.squareup.javapoet.JavaFile.Builder;
-import com.squareup.javapoet.TypeSpec;
-
-import one.util.streamex.EntryStream;
-import one.util.streamex.StreamEx;
+import java.io.IOException;
+import java.io.Writer;
+import java.util.Collection;
+import java.util.HashSet;
+import java.util.LinkedList;
+import java.util.List;
+import java.util.Map;
+import java.util.Optional;
+import java.util.Queue;
+import java.util.Set;
+import java.util.concurrent.atomic.AtomicInteger;
 
 @AutoService(Processor.class)
 public class BeanMatcherProcessor extends AbstractProcessor {
 
-	private final AtomicInteger round = new AtomicInteger();
-	private Types types;
-	private Messager messager;
-	private final Set<Element> processed = new HashSet<>();
-	private final Queue<TypeMirror> process = new LinkedList<>();
+    private final AtomicInteger round = new AtomicInteger();
+    private Types types;
+    @Getter
+    private Messager messager;
+    private final Set<Element> processed = new HashSet<>();
+    private final Queue<TypeMirror> process = new LinkedList<>();
 
-	// Special types
-	private DeclaredType mapType;
-	private DeclaredType iterableType;
-	private DeclaredType collectionType;
-	// Types to ignore while generate Bean Matchers
-	private Set<DeclaredType> ignoreClasses;
-	private Set<String> ignorePackagePrfixes = ImmutableSet.of("com.sun", "java", "javax", "jdk");
+    // Special types
+    private DeclaredType mapType;
+    private DeclaredType iterableType;
+    private DeclaredType collectionType;
+    // Types to ignore while generate Bean Matchers
+    private Set<DeclaredType> ignoreClasses;
+    private Set<String> ignorePackagePrfixes = ImmutableSet.of("com.sun", "java", "javax", "jdk");
 
-	@Override
-	public Set<String> getSupportedAnnotationTypes() {
-		return ImmutableSet.of(BeanMatcher.class.getName());
-	}
+    @Override
+    public Set<String> getSupportedAnnotationTypes() {
+        return ImmutableSet.of(BeanMatcher.class.getName());
+    }
 
-	@Override
-	public SourceVersion getSupportedSourceVersion() {
-		return SourceVersion.latestSupported();
-	}
+    @Override
+    public SourceVersion getSupportedSourceVersion() {
+        return SourceVersion.latestSupported();
+    }
 
-	@Override
-	public synchronized void init(ProcessingEnvironment env) {
-		types = env.getTypeUtils();
-		Elements elements = env.getElementUtils();
-		messager = env.getMessager();
+    @Override
+    public synchronized void init(ProcessingEnvironment env) {
+        types = env.getTypeUtils();
+        Elements elements = env.getElementUtils();
+        messager = env.getMessager();
 
-		// Special types
-		mapType = types.getDeclaredType(elements.getTypeElement(Map.class.getCanonicalName()));
-		iterableType = types.getDeclaredType(elements.getTypeElement(Iterable.class.getCanonicalName()));
-		collectionType = types.getDeclaredType(elements.getTypeElement(Collection.class.getCanonicalName()));
+        // Special types
+        mapType = types.getDeclaredType(elements.getTypeElement(Map.class.getCanonicalName()));
+        iterableType = types.getDeclaredType(elements.getTypeElement(Iterable.class.getCanonicalName()));
+        collectionType = types.getDeclaredType(elements.getTypeElement(Collection.class.getCanonicalName()));
 
-		// Initialize ignore if any
-		ignoreClasses = ImmutableSet.of();
+        // Initialize ignore if any
+        ignoreClasses = Set.of();
 
-		super.init(env);
-	}
+        super.init(env);
+    }
 
-	@SuppressWarnings({ "resource", "boxing" })
-	@Override
-	public boolean process(final Set<? extends TypeElement> annotations, final RoundEnvironment roundEnv) {
-		messager.printMessage(Kind.NOTE, String.format("Call the round %d for %s", round.incrementAndGet(), StreamEx
-				.of(roundEnv.getRootElements()).map(Element::getSimpleName).joining(", ")));
+    @SuppressWarnings({ "boxing" })
+    @Override
+    public boolean process(final Set<? extends TypeElement> annotations, final RoundEnvironment roundEnv) {
+        messager.printMessage(
+            Kind.NOTE, String.format(
+                "Call the round %d for %s", round.incrementAndGet(), StreamEx
+                    .of(roundEnv.getRootElements()).map(Element::getSimpleName).joining(", ")
+            )
+        );
 
-		StreamEx.of(roundEnv.getElementsAnnotatedWith(BeanMatcher.class))
-				.filterBy(Element::getKind, ElementKind.PACKAGE)
-				.map(PackageElement.class::cast)
-				.forEach(this::generate);
-		return true;
-	}
+        StreamEx.of(roundEnv.getElementsAnnotatedWith(BeanMatcher.class))
+            .filterBy(Element::getKind, ElementKind.PACKAGE)
+            .map(PackageElement.class::cast)
+            .forEach(this::generate);
+        return true;
+    }
 
-	private void generate(final PackageElement annotatedPackage) {
-		Name packageName = annotatedPackage.getQualifiedName();
-		GeneratorVisitor generatorVisitor = new GeneratorVisitor();
-		getAnnotationMirror(annotatedPackage, BeanMatcher.class)
-				.flatMap(this::processAnnotation)
-				.ifPresent(v -> v.accept(generatorVisitor, m -> generateMatcher(m, packageName)));
-		// Generate matchers for transitive beans (referenced from explicit configured)
-		while (!process.isEmpty()) {
-			generateMatcher(process.poll(), packageName);
-		}
+    private void generate(final PackageElement annotatedPackage) {
+        Name packageName = annotatedPackage.getQualifiedName();
+        GeneratorVisitor generatorVisitor = new GeneratorVisitor();
+        getAnnotationMirror(annotatedPackage, BeanMatcher.class)
+            .flatMap(this::processAnnotation)
+            .ifPresent(v -> v.accept(generatorVisitor, m -> generateMatcher(m, packageName)));
+        // Generate matchers for transitive beans (referenced from explicit configured)
+        while (!process.isEmpty()) {
+            generateMatcher(process.poll(), packageName);
+        }
 
-	}
+    }
 
-	@SuppressWarnings("resource")
-	private static Optional<AnnotationMirror> getAnnotationMirror(AnnotatedConstruct element, Class<?> annotation) {
-		String annotationName = annotation.getName();
-		return StreamEx.of(element.getAnnotationMirrors())
-				.map(AnnotationMirror.class::cast)
-				.findAny(m -> annotationName.equals(m.getAnnotationType().toString()));
-	}
+    private static Optional<AnnotationMirror> getAnnotationMirror(AnnotatedConstruct element, Class<?> annotation) {
+        String annotationName = annotation.getName();
+        return StreamEx.of(element.getAnnotationMirrors())
+            .map(AnnotationMirror.class::cast)
+            .findAny(m -> annotationName.equals(m.getAnnotationType().toString()));
+    }
 
-	private Optional<AnnotationValue> processAnnotation(AnnotationMirror annotationMirror) {
-		Optional<AnnotationValue> value = getAnnotationAttributeValue(annotationMirror, "value");
-		if (value.isPresent()) {
-			updateIgnorePackages(annotationMirror);
-		}
-		return value;
-	}
+    private Optional<AnnotationValue> processAnnotation(AnnotationMirror annotationMirror) {
+        Optional<AnnotationValue> value = getAnnotationAttributeValue(annotationMirror, "value");
+        if (value.isPresent()) {
+            updateIgnorePackages(annotationMirror);
+        }
+        return value;
+    }
 
-	private void updateIgnorePackages(AnnotationMirror annotationMirror) {
-		getAnnotationAttributeValue(annotationMirror, "ignorePackages")
-				.ifPresent(a -> a.accept(new IgnorePackageVisitor(), this::addIgnorePackage));
-	}
+    private void updateIgnorePackages(AnnotationMirror annotationMirror) {
+        getAnnotationAttributeValue(annotationMirror, "ignorePackages")
+            .ifPresent(a -> a.accept(new IgnorePackageVisitor(), this::addIgnorePackage));
+    }
 
-	private void addIgnorePackage(String packageToIgnore) {
-		ignorePackagePrfixes = ImmutableSet.<String> builder()
-				.addAll(ignorePackagePrfixes)
-				.add(packageToIgnore)
-				.build();
-	}
+    private void addIgnorePackage(String packageToIgnore) {
+        ignorePackagePrfixes = ImmutableSet.<String>builder()
+            .addAll(ignorePackagePrfixes)
+            .add(packageToIgnore)
+            .build();
+    }
 
-	@SuppressWarnings("resource")
-	private static Optional<AnnotationValue> getAnnotationAttributeValue(AnnotationMirror annotationMirror, String attributeName) {
-		return EntryStream.of(annotationMirror.getElementValues())
-				.mapKeys(ExecutableElement::getSimpleName)
-				.mapKeys(Name::toString)
-				.filterKeys(attributeName::equals)
-				.values()
-				.map(AnnotationValue.class::cast)
-				.findAny();
-	}
+    private static Optional<AnnotationValue> getAnnotationAttributeValue(AnnotationMirror annotationMirror, String attributeName) {
+        return EntryStream.of(annotationMirror.getElementValues())
+            .mapKeys(ExecutableElement::getSimpleName)
+            .mapKeys(Name::toString)
+            .filterKeys(attributeName::equals)
+            .values()
+            .map(AnnotationValue.class::cast)
+            .findAny();
+    }
 
-	private void generateMatcher(final TypeMirror beanClass, final Name packageName) {
-		if (!processed.add(types.asElement(beanClass))) {
-			messager.printMessage(Kind.NOTE, String.format("Generation of bean matcher for %s is skipped (already processed)", beanClass));
-			return;
-		}
-		messager.printMessage(Kind.NOTE, String.format("Generate bean matcher for %s", beanClass));
+    private void generateMatcher(final TypeMirror beanClass, final Name packageName) {
+        if (!processed.add(types.asElement(beanClass))) {
+            messager.printMessage(Kind.NOTE, String.format("Generation of bean matcher for %s is skipped (already processed)", beanClass));
+            return;
+        }
+        messager.printMessage(Kind.NOTE, String.format("Generate bean matcher for %s", beanClass));
 
-		TypeElement element = (TypeElement) types.asElement(beanClass);
-		if (element == null) {
-			messager.printMessage(Kind.WARNING, String.format("Can't get TypeElement for %s", beanClass));
-			return;
-		}
+        TypeElement element = (TypeElement) types.asElement(beanClass);
+        if (element == null) {
+            messager.printMessage(Kind.WARNING, String.format("Can't get TypeElement for %s", beanClass));
+            return;
+        }
 
-		final BeanMatcherBuilder builder = BeanMatcherBuilder.create(messager, packageName, element);
+        final BeanMatcherBuilder builder = BeanMatcherBuilder.create(messager, packageName, element);
 
-		generateElementMatcher(element, builder);
+        generateElementMatcher(element, builder);
 
-		if (builder.hasProperties()) {
-			writeJavaFile(packageName, builder.build(), builder.getStaticImports());
-		} else {
-			messager.printMessage(Kind.WARNING, String.format("Bean %s has not properties. Skip matcher generation", beanClass), element);
-		}
-	}
+        if (builder.hasProperties()) {
+            writeJavaFile(packageName, builder.build(), builder.getStaticImports());
+        } else {
+            messager.printMessage(Kind.WARNING, String.format("Bean %s has not properties. Skip matcher generation", beanClass), element);
+        }
+    }
 
-	private void generateElementMatcher(final TypeElement element, final BeanMatcherBuilder builder) {
-		element.accept(new ElementScanner8<Void, BeanMatcherBuilder>() {
-			@Override
-			public Void visitType(TypeElement e, BeanMatcherBuilder b) {
-				if (e != element) {
-					messager.printMessage(Kind.NOTE, String.format("Skip inner type %s", e));
-					return DEFAULT_VALUE;
-				}
-				return super.visitType(e, b);
-			}
+    private void generateElementMatcher(final TypeElement element, final BeanMatcherBuilder builder) {
+        element.accept(BeanMatcherElementScanner.create(element, this), builder);
+        TypeMirror superclass = element.getSuperclass();
+        if (isEligibleSuperClass(superclass)) {
+            TypeElement superElement = (TypeElement) types.asElement(superclass);
+            if (superElement == null) {
+                messager.printMessage(Kind.WARNING, String.format("Can't get TypeElement for %s", superclass));
+                return;
+            }
+            generateElementMatcher(superElement, builder);
+        }
 
-			@Override
-			public Void visitExecutable(ExecutableElement e, BeanMatcherBuilder b) {
-				getProperty(e).ifPresent(p -> processProperty(p, b));
-				return super.visitExecutable(e, b);
-			}
-		}, builder);
-		TypeMirror superclass = element.getSuperclass();
-		if (isEligibleSuperClass(superclass)) {
-			TypeElement superElement = (TypeElement) types.asElement(superclass);
-			if (superElement == null) {
-				messager.printMessage(Kind.WARNING, String.format("Can't get TypeElement for %s", superclass));
-				return;
-			}
-			generateElementMatcher(superElement, builder);
-		}
+    }
 
-	}
+    protected void processProperty(PropertyInfo propertyInfo, BeanMatcherBuilder beanMatcherBuilder) {
+        if (propertyInfo.getTypes() == null) {
+            messager.printMessage(Kind.WARNING, String.format("Types for property %s is null. Ignore it", propertyInfo));
+            return;
+        }
+        StreamEx.of(propertyInfo.getTypes())
+            .filter(this::isEligibleClass)
+            .toListAndThen(process::addAll);
+        beanMatcherBuilder.add(propertyInfo);
+    }
 
-	@SuppressWarnings("resource")
-	private void processProperty(PropertyInfo propertyInfo, BeanMatcherBuilder beanMatcherBuilder) {
-		if (propertyInfo.getTypes() == null) {
-			messager.printMessage(Kind.WARNING, String.format("Types for property %s is null. Ignore it", propertyInfo));
-			return;
-		}
-		StreamEx.of(propertyInfo.getTypes())
-				.filter(this::isEligibleClass)
-				.toListAndThen(process::addAll);
-		beanMatcherBuilder.add(propertyInfo);
-	}
+    private boolean isEligibleClass(TypeMirror beanClass) {
+        return !beanClass.getKind().isPrimitive() && !processed.contains(types.asElement(beanClass)) && !ignoredPackage(beanClass)
+            && !ignoredClass(beanClass);
+    }
 
-	private boolean isEligibleClass(TypeMirror beanClass) {
-		return !beanClass.getKind().isPrimitive() && !processed.contains(types.asElement(beanClass)) && !ignoredPackage(beanClass) && !ignoredClass(beanClass);
-	}
+    private boolean isEligibleSuperClass(TypeMirror beanClass) {
+        return !beanClass.getKind().isPrimitive() && !ignoredPackage(beanClass) && !ignoredClass(beanClass);
+    }
 
-	private boolean isEligibleSuperClass(TypeMirror beanClass) {
-		return !beanClass.getKind().isPrimitive() && !ignoredPackage(beanClass) && !ignoredClass(beanClass);
-	}
+    private boolean ignoredPackage(TypeMirror beanClass) {
+        Element element = types.asElement(beanClass);
+        if (element == null) {
+            return false;
+        }
+        return ignoredPackage(element.getEnclosingElement());
+    }
 
-	private boolean ignoredPackage(TypeMirror beanClass) {
-		Element element = types.asElement(beanClass);
-		if (element == null) {
-			return false;
-		}
-		return ignoredPackage(element.getEnclosingElement());
-	}
+    private boolean ignoredPackage(Element element) {
+        if (element == null) {
+            return false;
+        }
+        messager.printMessage(Kind.NOTE, String.format("Ignore packages %s", ignorePackagePrfixes));
+        boolean match = StreamEx.of(ignorePackagePrfixes)
+            .anyMatch(pref -> startWith(element, pref));
+        return match || ignoredPackage(element.getEnclosingElement());
+    }
 
-	@SuppressWarnings("resource")
-	private boolean ignoredPackage(Element element) {
-		if (element == null) {
-			return false;
-		}
-		messager.printMessage(Kind.NOTE, String.format("Ignore packages %s", ignorePackagePrfixes));
-		boolean match = StreamEx.of(ignorePackagePrfixes)
-				.anyMatch(pref -> startWith(element, pref));
-		return match || ignoredPackage(element.getEnclosingElement());
-	}
+    private static boolean startWith(Element element, String packagePrefix) {
+        if (element instanceof QualifiedNameable) {
+            Name qualifiedName = ((QualifiedNameable) element).getQualifiedName();
+            return qualifiedName.toString().toLowerCase().startsWith(packagePrefix);
+        }
+        return false;
+    }
 
-	private static boolean startWith(Element element, String packagePrefix) {
-		if (element instanceof QualifiedNameable) {
-			Name qualifiedName = ((QualifiedNameable) element).getQualifiedName();
-			return qualifiedName.toString().toLowerCase().startsWith(packagePrefix);
-		}
-		return false;
-	}
+    private boolean ignoredClass(TypeMirror beanClass) {
+        return StreamEx.of(ignoreClasses)
+            .anyMatch(parent -> isSameOrExtends(beanClass, parent));
+    }
 
-	@SuppressWarnings("resource")
-	private boolean ignoredClass(TypeMirror beanClass) {
-		return StreamEx.of(ignoreClasses)
-				.anyMatch(parent -> isSameOrExtends(beanClass, parent));
-	}
+    protected Optional<PropertyInfo> getProperty(ExecutableElement method) {
+        messager.printMessage(Kind.NOTE, String.format("Process metthod %s", method));
+        PropertyKind propertyKind = getPropertyKind(method);
 
-	protected Optional<PropertyInfo> getProperty(ExecutableElement method) {
-		messager.printMessage(Kind.NOTE, String.format("Process metthod %s", method));
-		PropertyKind propertyKind = getPropertyKind(method);
+        return Optional.of(method)
+            .filter(e -> !TypeKind.VOID.equals(e.getReturnType().getKind()))
+            .filter(e -> e.getParameters().isEmpty())
+            .filter(e -> e.getModifiers().contains(Modifier.PUBLIC))
+            .filter(e -> !e.getModifiers().contains(Modifier.STATIC))
+            .map(ExecutableElement::getSimpleName)
+            .map(Name::toString)
+            .map(BeanMatcherProcessor::getPropertyName)
+            .map(name -> PropertyInfo.builder().name(name))
+            .map(builder -> builder.kind(propertyKind))
+            .map(builder -> builder.types(getPropertyTypes(propertyKind, method)))
+            .map(PropertyInfo.PropertyInfoBuilder::build);
+    }
 
-		return Optional.of(method)
-				.filter(e -> !TypeKind.VOID.equals(e.getReturnType().getKind()))
-				.filter(e -> e.getParameters().isEmpty())
-				.filter(e -> e.getModifiers().contains(Modifier.PUBLIC))
-				.filter(e -> !e.getModifiers().contains(Modifier.STATIC))
-				.map(ExecutableElement::getSimpleName)
-				.map(Name::toString)
-				.map(BeanMatcherProcessor::getPropertyName)
-				.map(name -> PropertyInfo.builder().name(name))
-				.map(builder -> builder.kind(propertyKind))
-				.map(builder -> builder.types(getPropertyTypes(propertyKind, method)))
-				.map(PropertyInfo.PropertyInfoBuilder::build);
-	}
+    protected Optional<PropertyInfo> getProperty(RecordComponentElement property) {
+        messager.printMessage(Kind.NOTE, String.format("Process record property %s", property));
+        PropertyKind propertyKind = getPropertyKind(property);
+        return Optional.of(property)
+            .map(RecordComponentElement::getSimpleName)
+            .map(Name::toString)
+            .map(name -> PropertyInfo.builder().name(name))
+            .map(builder -> builder.kind(propertyKind))
+            .map(builder -> builder.types(getPropertyTypes(propertyKind, property)))
+            .map(PropertyInfo.PropertyInfoBuilder::build);
+    }
 
-	private PropertyKind getPropertyKind(ExecutableElement method) {
-		TypeMirror returnType = method.getReturnType();
-		return returnType.accept(new SimpleTypeVisitor8<PropertyKind, Void>() {
+    private PropertyKind getPropertyKind(ExecutableElement method) {
+        return getPropertyKind(method.getReturnType());
+    }
 
-			@Override
-			public PropertyKind visitArray(ArrayType t, Void p) {
-				return PropertyKind.ARRAY;
-			}
+    private PropertyKind getPropertyKind(RecordComponentElement property) {
+        return getPropertyKind(property.asType());
+    }
 
-			@Override
-			public PropertyKind visitDeclared(DeclaredType type, Void p) {
-				return Optional.of(type)
-						.flatMap(BeanMatcherProcessor.this::checkSpecificKinds)
-						.orElse(PropertyKind.SCALAR);
-			}
+    private PropertyKind getPropertyKind(TypeMirror type) {
+        return type.accept(new SimpleTypeVisitor14<PropertyKind, Void>() {
 
-			@Override
-			public PropertyKind visitPrimitive(PrimitiveType t, Void p) {
-				return PropertyKind.SCALAR;
-			}
-		}, null);
-	}
+            @Override
+            public PropertyKind visitArray(ArrayType t, Void p) {
+                return PropertyKind.ARRAY;
+            }
 
-	@SuppressWarnings("resource")
-	private Optional<PropertyKind> checkSpecificKinds(TypeMirror type) {
-		if (types.isSameType(types.erasure(type), mapType)) {
-			return Optional.of(PropertyKind.MAP);
-		}
-		if (types.isSameType(types.erasure(type), collectionType)) {
-			return Optional.of(PropertyKind.COLLECTION);
-		}
-		if (types.isSameType(types.erasure(type), iterableType)) {
-			return Optional.of(PropertyKind.ITERABLE);
-		}
-		return StreamEx.of(types.directSupertypes(type))
-				.map(this::checkSpecificKinds)
-				.findAny(Optional::isPresent)
-				.orElseGet(Optional::empty);
-	}
+            @Override
+            public PropertyKind visitDeclared(DeclaredType type, Void p) {
+                return Optional.of(type)
+                    .flatMap(BeanMatcherProcessor.this::checkSpecificKinds)
+                    .orElse(PropertyKind.SCALAR);
+            }
 
-	@SuppressWarnings("resource")
-	private boolean isSameOrExtends(TypeMirror type, TypeMirror parent) {
-		if (types.isSameType(types.erasure(type), parent)) {
-			return true;
-		}
-		return StreamEx.of(types.directSupertypes(type))
-				.anyMatch(st -> isSameOrExtends(st, parent));
-	}
+            @Override
+            public PropertyKind visitPrimitive(PrimitiveType t, Void p) {
+                return PropertyKind.SCALAR;
+            }
+        }, null);
+    }
 
-	@SuppressWarnings("resource")
-	private List<TypeMirror> getPropertyTypes(PropertyKind propertyKind, ExecutableElement method) {
-		return method.getReturnType().accept(new SimpleTypeVisitor8<List<TypeMirror>, Void>() {
-			@Override
-			public List<TypeMirror> visitArray(ArrayType type, Void p) {
-				return ImmutableList.of(type.getComponentType());
-			}
+    private Optional<PropertyKind> checkSpecificKinds(TypeMirror type) {
+        if (types.isSameType(types.erasure(type), mapType)) {
+            return Optional.of(PropertyKind.MAP);
+        }
+        if (types.isSameType(types.erasure(type), collectionType)) {
+            return Optional.of(PropertyKind.COLLECTION);
+        }
+        if (types.isSameType(types.erasure(type), iterableType)) {
+            return Optional.of(PropertyKind.ITERABLE);
+        }
+        return StreamEx.of(types.directSupertypes(type))
+            .map(this::checkSpecificKinds)
+            .findAny(Optional::isPresent)
+            .orElseGet(Optional::empty);
+    }
 
-			@Override
-			public List<TypeMirror> visitDeclared(DeclaredType type, Void p) {
-				if (propertyKind == PropertyKind.SCALAR) {
-					return ImmutableList.of(type);
-				}
-				return StreamEx.of(type.getTypeArguments()).map(TypeMirror.class::cast).prepend(types.erasure(type)).toList();
-			}
+    private boolean isSameOrExtends(TypeMirror type, TypeMirror parent) {
+        if (types.isSameType(types.erasure(type), parent)) {
+            return true;
+        }
+        return StreamEx.of(types.directSupertypes(type))
+            .anyMatch(st -> isSameOrExtends(st, parent));
+    }
 
-			@Override
-			public List<TypeMirror> visitPrimitive(PrimitiveType type, Void p) {
-				return ImmutableList.of(type);
-			}
-		}, null);
-	}
+    private List<TypeMirror> getPropertyTypes(PropertyKind propertyKind, ExecutableElement method) {
+        return getPropertyTypes(propertyKind, method.getReturnType());
+    }
 
-	protected static String getPropertyName(String methodName) {
-		return getPropertyName(methodName, "get").orElseGet(() -> getPropertyName(methodName, "is").orElse(null));
-	}
+    private List<TypeMirror> getPropertyTypes(PropertyKind propertyKind, RecordComponentElement property) {
+        return getPropertyTypes(propertyKind, property.asType());
+    }
 
-	protected static Optional<String> getPropertyName(String methodName, String prefix) {
-		boolean getName = methodName.length() > prefix.length() && methodName.startsWith(prefix);
-		if (getName) {
-			return Optional.of(methodName.substring(prefix.length()));
-		}
-		return Optional.empty();
-	}
+    private List<TypeMirror> getPropertyTypes(PropertyKind propertyKind, TypeMirror type) {
+        return type.accept(new SimpleTypeVisitor14<List<TypeMirror>, Void>() {
+            @Override
+            public List<TypeMirror> visitArray(ArrayType type, Void p) {
+                return List.of(type.getComponentType());
+            }
 
-	private void writeJavaFile(final Name packageName, TypeSpec spec, List<ClassName> staticImports) {
+            @Override
+            public List<TypeMirror> visitDeclared(DeclaredType type, Void p) {
+                if (propertyKind == PropertyKind.SCALAR) {
+                    return List.of(type);
+                }
+                return StreamEx.of(type.getTypeArguments()).map(TypeMirror.class::cast).prepend(types.erasure(type)).toList();
+            }
 
-		final Builder javaFileBuilder = JavaFile.builder(packageName.toString(), spec).indent("\t");
-		staticImports.forEach(i -> javaFileBuilder.addStaticImport(i, "*"));
-		JavaFile javaFile = javaFileBuilder.build();
+            @Override
+            public List<TypeMirror> visitPrimitive(PrimitiveType type, Void p) {
+                return List.of(type);
+            }
+        }, null);
+    }
 
-		try {
-			final JavaFileObject jfo = processingEnv.getFiler().createSourceFile(packageName.toString() + "." + spec.name);
-			try (Writer wr = jfo.openWriter()) {
-				javaFile.writeTo(wr);
-			}
-		} catch (final IOException e) {
-			processingEnv.getMessager().printMessage(Kind.ERROR, String.format("Can't write class %s to package %s: %s", spec, packageName, e.getMessage()));
-		}
-	}
+    protected static String getPropertyName(String methodName) {
+        return getPropertyName(methodName, "get").orElseGet(() -> getPropertyName(methodName, "is").orElse(null));
+    }
+
+    protected static Optional<String> getPropertyName(String methodName, String prefix) {
+        boolean getName = (methodName.length() > prefix.length()) && methodName.startsWith(prefix);
+        if (getName) {
+            return Optional.of(methodName.substring(prefix.length()));
+        }
+        return Optional.empty();
+    }
+
+    private void writeJavaFile(final Name packageName, TypeSpec spec, List<ClassName> staticImports) {
+
+        final Builder javaFileBuilder = JavaFile.builder(packageName.toString(), spec).indent("\t");
+        staticImports.forEach(i -> javaFileBuilder.addStaticImport(i, "*"));
+        JavaFile javaFile = javaFileBuilder.build();
+
+        try {
+            final JavaFileObject jfo = processingEnv.getFiler().createSourceFile(packageName.toString() + "." + spec.name);
+            try (Writer wr = jfo.openWriter()) {
+                javaFile.writeTo(wr);
+            }
+        } catch (final IOException e) {
+            processingEnv.getMessager().printMessage(
+                Kind.ERROR, String.format("Can't write class %s to package %s: %s", spec, packageName, e.getMessage())
+            );
+        }
+    }
 
 }
